@@ -1,5 +1,12 @@
 2009-02-27  David Gilbert  <david.gilbert@object-refinery.com>
 
+    Bug 2612649:
+    * source/org/jfree/chart/editor/DefaultPlotEditor.java
+    (DefaultPlotEditor): Added null Stroke to available options,
+    (attemptOutlineStrokeSelection): Use current stroke.
+
+2009-02-27  David Gilbert  <david.gilbert@object-refinery.com>
+
     Bug 2617557:
     * source/org/jfree/chart/plot/dial/StandardDialScale.java
     (draw): Use tickLabelPaint.
